Allow using SNI TLS certificates with IMAP/POP3
