# lib/pop3/server.js
@@ -78,7 +78,23 @@ class POP3Server extends EventEmitter {
             secureContext: this.secureContext.get('*'),
             isServer: true,
             server: this.server,
-            SNICallback: this.options.SNICallback
+            SNICallback: (servername, cb) => {
+                // eslint-disable-next-line new-cap
+                this.options.SNICallback(this._normalizeHostname(servername), (err, context) => {
+                    if (err) {
+                        this.logger.error(
+                            {
+                                tnx: 'sni',
+                                servername,
+                                err
+                            },
+                            'Failed to fetch SNI context for servername %s',
+                            servername
+                        );
+                    }
+                    return cb(null, context || this.secureContext.get('*'));
+                });
+            }
         };
 
         let remoteAddress = socket.remoteAddress;
@@ -187,7 +203,7 @@ class POP3Server extends EventEmitter {
             if (typeof this.options.SNICallback !== 'function') {
                 // create default SNI handler
                 this.options.SNICallback = (servername, cb) => {
-                    cb(null, this.secureContext.get(this._normalizeHostname(servername)) || this.secureContext.get('*'));
+                    cb(null, this.secureContext.get(servername));
                 };
             }
         }
